--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
     },
     "autoload": {
         "psr-4": {
+            "shiyunFrame\\": "src/",
             "ctocode\\": "src/"
         },
         "files": [
